// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns Grouped using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-column"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          aria-label="y: 5"
          class="column"
          height="0"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="23"
          x="2"
          y="100"
        />
        <rect
          aria-label="y2: 8"
          class="column"
          height="0"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="23"
          x="26"
          y="100"
        />
      </g>
      <g>
        <rect
          aria-label="y: 10"
          class="column"
          height="0"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="23"
          x="52"
          y="100"
        />
        <rect
          aria-label="y2: 12"
          class="column"
          height="0"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="23"
          x="76"
          y="100"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Columns Stacked using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-column"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          aria-label="y: 5"
          class="column"
          height="0"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="50"
          x="0"
          y="100"
        />
        <rect
          aria-label="y: 10"
          class="column"
          height="0"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="-1"
          width="50"
          x="50"
          y="100"
        />
      </g>
      <g>
        <rect
          aria-label="y2: 8"
          class="column"
          height="0"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="0"
          width="50"
          x="0"
          y="100"
        />
        <rect
          aria-label="y2: 12"
          class="column"
          height="0"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="50"
          x="50"
          y="100"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
